Fixed some display issues CHanged some code, tidied up some CSS code structure, made it look better. Pushing to test on mobile again, as browser mobile view does not reflect properly on my mobile

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -137,6 +137,20 @@ html {
   flex-direction: column;
   max-width: 100%;
 }
+.mobile-nav a {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+  text-decoration: none;
+  font-size: 150%;
+}
+@media (min-width: 768px) {
+  .mobile-nav {
+    padding: 2rem;
+    margin: 1rem;
+    max-width: 800px;
+  }
+}
 @media (min-width: 550px) {
   .mobile-nav {
     flex-direction: row;
@@ -148,23 +162,13 @@ html {
     justify-content: flex-end;
   }
 }
-.mobile-nav a {
-  display: flex;
-  justify-content: center;
-  padding: 1rem;
-  text-decoration: none;
-  font-size: 150%;
-}
-@media (min-width: 768px) {
-  .mobile-nav a {
-    padding: 2rem;
-    margin: 1rem;
-    max-width: 800px;
-  }
-}
 .footer-navbar {
   display: flex;
   flex-direction: row;
+}
+.footer-navbar a {
+  display: flex;
+  text-decoration: none;
 }
 .header {
   display: flex;
@@ -181,76 +185,6 @@ html {
   justify-content: center;
   padding: 2rem;
   margin: 2rem;
-}
-.input {
-  position: relative;
-  font-size: 1.5em;
-  background: linear-gradient(21deg, #10abff, #1beabd);
-  padding: 3px;
-  display: inline-block;
-  border-radius: 9999em;
-}
-.input *:not(span) {
-  position: relative;
-  display: inherit;
-  border-radius: inherit;
-  margin: 0;
-  border: none;
-  outline: none;
-  padding: 0 0.325em;
-  z-index: 1;
-}
-.input *:not(span):focus + span {
-  opacity: 1;
-  transform: scale(1);
-}
-.input span {
-  transform: scale(0.993, 0.94);
-  transition: transform 0.5s, opacity 0.25s;
-  opacity: 0;
-  position: absolute;
-  z-index: 0;
-  margin: 4px;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: inherit;
-  pointer-events: none;
-  box-shadow: inset 0 0 0 3px #fff, 0 0 0 4px #fff, 3px -3px 30px #1beabd, -3px 3px 30px #10abff;
-}
-html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  line-height: 1.5;
-  font-size: 1em;
-}
-body {
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-html,
-body {
-  height: 100%;
-}
-input {
-  font-family: inherit;
-  line-height: inherit;
-  color: #2e3750;
-  min-width: 12em;
-}
-::placeholder {
-  color: #cbd0d5;
-}
-html::after {
-  content: '';
-  background: linear-gradient(21deg, #10abff, #1beabd);
-  height: 3px;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
 }
 :root {
   height: 100%;
